# applied-statistics-exam

./: README.md  bankruptcy-prediction.ipynb  exam-problems.ipynb  pyproject.toml
