[project]
name = "applied-statistics-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "rich>=13.9.4",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
